--- a/sorelTP2/src/main/resources/static/css/main.css
+++ b/sorelTP2/src/main/resources/static/css/main.css
@@ -1,39 +1,44 @@
-.hello-title{
+.hello-title {
     color: darkgreen;
 }
-.body{
+
+.body {
     background-color: #edefef;
 }
 
-.menu{
+.menu {
     background-color: #ffffff;
 }
 
-.write{
+.write {
     font-family: "Times New Roman", Times, serif;
 }
 
-.user-title{
+.user-title {
     font-family: "Times New Roman", Times, serif;
     font-size: 12px;
 }
+
 .displayed {
     display: block;
     margin-left: auto;
-    margin-right: auto ;
-    width: 50%;height: auto;}
+    margin-right: auto;
+    width: 50%;
+    height: auto;
+}
+
 .bienvenue {
     text-align: center;
 }
 
-.entete{
+.entete {
     background-color: #d8e7ff;
     padding-left: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
 
-.col-sm-12{
+.col-sm-12 {
     width: 90%;
     margin: 10pt;
 }
@@ -42,4 +47,31 @@ hr.barre {
     border-top: 2px solid black;
 }
 
-.solid {border-style: solid;}
+.solid {
+    border-style: solid;
+}
+
+.center {
+    margin-top: 8%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    background-color: #e3f2fd;
+    border-radius: 10px;
+    vertical-align: middle;
+    padding: 20pt;
+}
+
+.centerAlpha {
+    margin-top: 8%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 10px;
+    vertical-align: middle;
+    padding: 20pt;
+}
+
+.switch-10{
+    margin-right: 15pt;
+}
